Forgot the nav bar stuff

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,9 @@
 # main links
 main:
+  - title: "About"
+    permalink: /about/
+  - title: "Projects"
+    permalink: /projects/
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
