--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Nathaniel Endicott"
 title_separator          : "-"
 name                     : "Nathaniel Endicott"
 description              : "Nathaniel's Portfolio."
-url                      : "https://npendicott.github.io/"  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : # "https://npendicott.github.io/"  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -266,10 +266,10 @@ defaults:
       comments: # true
       share: true
       related: true
-
+  # _pages
   - scope:
       path: ""
       type: posts
     values:
       layout: single
-      author_profile: true 
+      author_profile: true
