--- a/_config.yml
+++ b/_config.yml
@@ -255,7 +255,7 @@ compress_html:
 
 # Defaults
 defaults:
-  # _posts
+  # projec
   - scope:
       path: ""
       type: posts
@@ -266,6 +266,7 @@ defaults:
       comments: # true
       share: true
       related: true
+
   # _pages
   - scope:
       path: ""
